parser/fase2/team24/Gramaticas/Definicion Gramatica Ascendente V5.txt
Gramática Ascendente
<ID> := Identificador
<TIPO> := 	int
<COND> := <ID> = <TIPO>
	<WHERECOND> := <ID> <WHERECOND2>;
	<WHERECOND2> := BETWEEN <TIPO> AND <TIPO>
				|	= <TIPO>
•	Manipulación de Base de Datos
<FILTDB> := CREATE <CREREPDB>
	|	REPLACE <CREREPDB>
<CREREPDB> := DATABASE [IF NOT EXISTS] <ID> [ OWNER [=] <ID> ][ MODE [=] <MODE> ] 
<MODE> := 1
	|	int
<SHOWDB> := SHOW DATABASES [LIKE <ID>]
<ALTERDB> := ALTER DATABASE <ID> <ALTERDB2>
<ALTERDB2> := RENAME TO <ID>
	|	OWNER TO <OWNDB>
<OWNDB> := { <ID> | <ID> | <ID> }
<DROPDB> := DROP DATABASE <IFEXISTS> <ID>

<IFEXISTS> := IF EXISTS
		|	Є
<USEDB>	:=	USE <ID> ;
•	Manipulación de Tablas
<CREATETB> := CREATE TABLE <ID> ( <CONTTB> ); <HERENCIA>
<HERENCIA> := INHERITS (<ID>);
<HERENCIA> := Є
<CONTTB> := <CONTTB> , <COLUMNA>
<CONTTB> := <COLUMNA>
<COLUMNA> := <ID> <TIPO><PROPCOL>
<PROPCOL> := <PROPCOL> <PROPIEDADESCOL>
<PROPCOL> := <PROPIEDADESCOL>
<PROPIEDADESCOL> := [DEFAULT <ID>]
	|	[NOT NULL]
	|	[[CONSTRAINT <ID>] UNIQUE]
	|	[[CONSTRAINT <ID>] CHECK (<ID>)]
	|	[PRIMARY KEY]
	|	[REFERENCES <ID>]
<DROPTB> := DROP TABLE <ID>;
<ALTTB> := ALTER TABLE <ID> <ALTTB2>
<ALTTB2> := ADD COLUMN <ID> <TIPO>;
	|	DROP COLUMN <ID>;
	|	ADD CONSTRAINT <ID> UNIQUE (<ID>);
	|	ADD FOREIGN KEY (<ID>) REFERENCES <ID>;
	|	ALTER COLUMN <ID> <PROPIEDADESCOL>;
	|	DROP CONSTRAINT <ID>;
	|	RENAME COLUMN <ID> TO <ID>;
	<DELETFROM> := DELETE FROM <DELETFROM2>
	<DELETFROM2> := [ ONLY ] <ID> <DELETFROM3>
		|	<ID> <DELETFROM3>
	<DELETFROM3> := * <DELETFROM4>
		|	<DELETFROM4>

	<DELETFROM4> := AS <ID> <DELETFROM5>
		|	<DELETFROM5>
	<DELETFROM5> := WHERE <COND>
•	Manipulación de Datos
<INSERT> := INSERT INTO <ID> VALUES (<VALORES>);
<VALORES> := <VALORES> , <TIPO>
<VALORES> := <TIPO>
<UPDATE> := UPDATE <ID> SET <COND> WHERE <WHERECOND>;
<DELETE> DELETE FROM id WHERE <WHERECOND>;
