parser/fase2/team24/grammar22.py
#Parte lexica en ply
from reportError import CError
from reportError import insert_error
from reportBNF import insertProduction
from reportBNF import insertRegla

entrada = ''

import InstruccionesDGA as inst

reservadas = {
    'now' : 'NOW',
    'smallint' : 'SMALLINT',
    'integer' : 'INTEGER',
    'bigint' : 'BIGINT',
    'decimal' : 'DECIMAL',
    'numeric' : 'NUMERIC',
    'real' : 'REAL',
    'double' : 'DOUBLE',
    'precision' : 'PRECISION',
    'character' : 'CHARACTER',
    'varying' : 'VARYING',
    'text' : 'TEXT',
    'timestamp' : 'TIMESTAMP',
    'select': 'SELECT',
    'extract' : 'EXTRACT',
    'year' : 'YEAR',
    'day' : 'DAY',
    'hour' : 'HOUR',
    'minute' : 'MINUTE',
    'second' : 'SECOND',
    'month' : 'MONTH',
    'date_part' : 'DATE_PART',
    'from' : 'FROM',
    'current_date' : 'CURRENT_DATE',
    'current_time' : 'CURRENT_TIME',
    'boolean' : 'BOOLEAN',
    'create' : 'CREATE',
    'type' : 'TYPE',
    'as' : 'AS',
    'between': 'BETWEEN',
    'is' : 'IS',
    'like' : 'LIKE',
    'in' : 'IN',
    'null' : 'NULL',
    'not' : 'NOT',
    'and' : 'AND',
    'or' : 'OR',
    'replace' : 'REPLACE',
    'database' : 'DATABASE',
    'if' : 'IF',
    'owner' : 'OWNER',
    'alter' : 'ALTER',
    'rename' : 'RENAME',
    'to' : 'TO',
    'current_user' : 'CURRENT_USER',
    'session_user' : 'SESSION_USER',
    'drop' : 'DROP',
    'exists' : 'EXISTS',
    'table' : 'TABLE',
    'constraint' : 'CONSTRAINT',
    'unique' : 'UNIQUE',
    'check' : 'CHECK',
    'key' : 'KEY',
    'primary' : 'PRIMARY',
    'references' : 'REFERENCES',
    'foreign' : 'FOREIGN',
    'set' : 'SET',
    'column' : 'COLUMN',
    'inherits' : 'INHERITS',
    'insert' : 'INSERT',
    'into' : 'INTO',
    'update' : 'UPDATE',
    'delete' : 'DELETE',
    'where' : 'WHERE',
    'values' : 'VALUES',
    'by' : 'BY',
    'having' : 'HAVING',
    'abs' : 'ABS',
    'cbrt' : 'CBRT',
    'ceil' : 'CEIL',
    'ceiling' : 'CEILING',
    'degrees' : 'DEGREES',
    'div' : 'DIV',
    'exp' : 'EXP',
    'factorial' : 'FACTORIAL',
    'floor' : 'FLOOR',
    'gcd' : 'GCD',
    'lcm' : 'LCM',
    'ln' : 'LN',
    'log' : 'LOG',
    'log10' : 'LOG10',
    'min_scale' : 'MIN_SCALE',
    'mod' : 'MOD',
    'pi' : 'PI',
    'power' : 'POWER',
    'radians' : 'RADIANS',
    'round' : 'ROUND',
    'scale' : 'SCALE',
    'sign' : 'SIGN',
    'sqrt' : 'SQRT',
    'trim_scale' : 'TRIM_SCALE',
    'trunc' : 'TRUNC',
    'width_bucket' : 'WIDTH_BUCKET',
    'random' : 'RANDOM',
    'setseed' : 'SETSEED',
    'count' : 'COUNT',
    'length' : 'LENGHT',
    'substring' : 'SUBSTRING',
    'trim' : 'TRIM',
    'get_byte' : 'GET_BYTE',
    'md5' : 'MD5',
    'set_byte' : 'SET_BYTE',
    'sha256' : 'SHA256',
    'substr' : 'SUBSTR',
    'case' : 'CASE',
    'when' : 'WHEN',
    'else' : 'ELSE',
    'end' : 'END',
    'greatest' : 'GREATEST',
    'least' : 'LEAST',
    'limit' : 'LIMIT',
    'asc' : 'ASC',
    'desc' : 'DESC',
    'first' : 'FISRT',
    'last' : 'LAST',
    'nulls' : 'NULLS',
    'offset' : 'OFFSET',
    'all' : 'ALL',
    'union' : 'UNION',
    'intersect' : 'INTERSECT',
    'then' : 'THEN',
    'decode' : 'DECODE',
    'except' : 'EXCEPT',
    'distinct':'DISTINCT',
    'acos':'ACOS',
    'acosd':'ACOSD',
    'asin':'ASIN',
    'asind':'ASIND',
    'atan':'ATAN',
    'atand':'ATAND',
    'atan2':'ATAN2',
    'atan2d':'ATAN2D',
    'cos':'COS',
    'cosd':'COSD',
    'cot':'COT',
    'cotd':'COTD',
    'sin':'SIN',
    'sind':'SIND',
    'tan':'TAN',
    'tand':'TAND',
    'sinh':'SINH',
    'cosh':'COSH',
    'tanh':'TANH',
    'asinh':'ASINH',
    'acosh':'ACOSH',
    'atanh':'ATANH',
    'trunc':'TRUNC',
    'sum':'SUM',
    'avg':'AVG',
    'max':'MAX',
    'min':'MIN',
    'length':'LENGTH',
    'convert' : 'CONVERT',
    'false' : 'FALSE',
    'true' : 'TRUE',
    'group' : 'GROUP',
    'order' : 'ORDER',
    'show' : 'SHOW',
    'databases' : 'DATABASES',
    'mode' : 'MODE',
    'add' : 'ADD',
    'only' : 'ONLY',
    'serial' : 'SERIAL',
    'name' : 'NAME',
    'default' : 'DEFAULT',
    'use'   :   'USE',
    'money' :   'MONEY',
    'date'  :   'DATE',
    'varchar'   :   'VARCHAR',
    'time'  :   'TIME',
    'function' : 'FUNCTION',
    'returns' : 'RETURNS',
    'raise' : 'RAISE',
    'notice' : 'NOTICE',
    'return' : 'RETURN',
    'begin' : 'BEGIN',
    'end' : 'END',
    'alias' : 'ALIAS',
    'constant' : 'CONSTANT',
    'collate' : 'COLLATE',
    'declare' : 'DECLARE',
    'for' : 'FOR',
    'time'  :   'TIME',
    'index' :   'INDEX',
    'on'    :   'ON',
    'using' :   'USING',
    'hash'  :   'HASH',
    'first' : 'FIRST',
    'if' : 'IF',
    'elsif' : 'ELSIF',
    'concurrently'  :   'CONCURRENTLY',
    'cascade'   :   'CASCADE',
    'restrict'  :   'RESTRICT',
    'reset' :   'RESET',
    'nowait'    :   'NOWAIT',
    'depends'   :   'DEPENDS',
    'extension' :   'EXTENSION',
    'tablespace'    :   'TABLESPACE',
    'owned' :   'OWNED',

    'procedure' :'PROCEDURE',
    'language' : 'LANGUAGE',
    'plpgsql' : 'PLPGSQL',
    'execute' : 'EXECUTE',
}

tokens = [
             'VIR',
             'DEC',
             'MAS',
             'MENOS',
             'ELEVADO',
             'MULTIPLICACION',
             'DIVISION',
             'MODULO',
             'MENOR',
             'MAYOR',
             'IGUAL',
             'MENOR_IGUAL',
             'MAYOR_IGUAL',
             'MENOR_MENOR',
             'MAYOR_MAYOR',
             'DIFERENTE',
             'SIMBOLOOR',
             'SIMBOLOAND',
             'LLAVEA',
             'LLAVEC',
             'PARA',
             'PARC',
             'DOSPUNTOS',
             'COMA',
             'PUNTO',
             'INT',
             'TEXTO',
             'CHAR',
             'ID',
             'PUNTOCOMA',
             'CORCHETEA',
             'CORCHETEC',
             'DOLAR'
         ] + list(reservadas.values())

#Token
t_VIR = r'~'
t_MAS = r'\+'
t_MENOS = r'-'
t_ELEVADO= r'\^'
t_MULTIPLICACION = r'\*'
t_DIVISION =r'/'
t_MODULO= r'%'
t_MENOR =r'<'
t_MAYOR =r'>'
t_IGUAL =r'='
t_MENOR_IGUAL =r'<='
t_MAYOR_IGUAL =r'>='
t_MENOR_MENOR =r'<<'
t_MAYOR_MAYOR =r'>>'
t_DIFERENTE=r'<>'
t_SIMBOLOOR=r'\|'
t_SIMBOLOAND = r'\&'
t_LLAVEA = r'\{'
t_LLAVEC = r'\}'
t_PARA = r'\('
t_PARC = r'\)'
t_DOSPUNTOS=r'\:'
t_COMA=r'\,'
t_PUNTOCOMA = r'\;'
t_PUNTO=r'\.'
t_CORCHETEA=r'\['
t_CORCHETEC=r'\]'
t_DOLAR = r'\$'

def t_DEC(t):
    r'\d+\.\d+'
    try:
        t.value = float(t.value)
    except ValueError:
        descript = 'error lexico at token ' + str(t.value)
        linea = str(t.lineno)
        columna = str(find_column(t))
        nuevo_error = CError(linea,columna,descript,'Lexico')
        insert_error(nuevo_error)
        print("Error no se puede convertir %d", t.value)
        t.value = 0
    return t

def t_INT(t):
    r'\d+'
    try:
        t.value = int(t.value)
    except ValueError:
        descript = 'error lexico at token ' + str(t.value)
        linea = str(t.lineno)
        columna = str(find_column(t))
        nuevo_error = CError(linea,columna,descript,'Lexico')
        insert_error(nuevo_error)
        print("Valor numerico incorrecto %d", t.value)
        t.value = 0
    return t

def t_ID(t):
    r'[a-zA-Z_][a-zA-Z_0-9]*'
    t.type = reservadas.get(t.value.lower(), 'ID')
    return t

def t_TEXTO(t):
    r'\'.*?\''
    t.value = t.value[1:-1]  # remuevo las comillas
    return t

def t_VARCHAR(t):
    r'\'.*?\''
    t.value = t.value[1:-1]  # remuevo las comillas
    return t

def t_COMENT_SIMPLE(t):
    r'//.*\n'
    t.lexer.lineno += 1

def t_COMENT_MULTILINEA(t):
    r'/\*(.|\n)*?\*/'
    t.lexer.lineno += t.value.count('\n')

t_ignore = " \t"

def t_nuevalinea(t):
    r'\n+'
    t.lexer.lineno += t.value.count("\n")

def t_error(t):
    descript = 'error lexico at token ' + str(t.value[0])
    linea = str(t.lineno)
    columna = str(find_column(t))
    nuevo_error = CError(linea,columna,descript,'Lexico')
    insert_error(nuevo_error)
    t.lexer.skip(1)

from classesQuerys import *
from procedural import *
import ply.lex as lex
lexer = lex.lex()



precedence = (
    ('left','PUNTO'),
    ('right','UMAS','UMENOS'),
    ('left','ELEVADO'),
    ('left','MULTIPLICACION','DIVISION','MODULO'),
    ('left','MAS','MENOS'),
    ('left','BETWEEN','IN','LIKE'),
    ('left','MENOR','MAYOR','MENOR_IGUAL','MAYOR_IGUAL','IGUAL','DIFERENTE'),
    ('right','NOT'),
    ('left','AND'),
    ('left','OR')
)
"""INICIO ANALIZADOR"""
#PRODUCCIONES GENERALES
def p_inicio(t):
    """
    inicio  :   inicio inst
    """
    t[1].append(t[2])
    t[0] = t[1]
    insertProduction(t.slice, len(t.slice))

def p_inicio2(t):
    """
    inicio  :   inst
    """
    t[0] = [t[1]]
    insertProduction(t.slice, len(t.slice))

def p_inst(t):
    """
    inst    :   createdb
            |   showdb
            |   alterdb
            |   dropdb
            |   createtb
            |   droptb
            |   altertb
            |   insert
            |   update
            |   delete
            |   usedb
            |   query
            |   queryf
            |   createfunc
            |   createind
            |   createproc
            |   dropind
            |   alterind
            |   dropfunc
            |   dropproc
            |   callproc



    """
    t[0] = t[1]
    insertProduction(t.slice, len(t.slice))

def p_dropfunc(t):
    'dropfunc : DROP FUNCTION lidf PUNTOCOMA'
    t[0] = dropfunc(t[3])

def p_dropproc(t):
    'dropproc : DROP PROCEDURE  lidf PUNTOCOMA'
    t[0] = dropfunc(t[3])


def p_lidfz(t):
    ' lidf : lidf COMA ID'
    t[1].append(t[3])
    t[0] = t[1]

def p_lidf(t):
    ' lidf :  ID'
    t[0] = [t[1]]

def p_instprocedural(t):
    """
    instp    :   createdbp
            |   showdbp
            |   alterdbp
            |   dropdbp
            |   createtbp
            |   droptbp
            |   altertbp
            |   insertpp
            |   updatep
            |   deletep
            |   querypp
            |   createindp
            |   dropindp
            |   alterindp

    """
    t[0] = inst_procedural(t[1])

#ALTER INDICE DUPLICADO-----------------------------------------------*
def p_alterindp(t):
    """
    alterindp    :   ALTER INDEX ifexistsind alterind2p ownedbyindp alterind2p nowait PUNTOCOMA
    """
    t[0] = t[1] + " " + t[2] + " " + t[3] + " " + t[4] + " " + t[5] + " " + t[6] + " " + t[7] +  t[8]
    insertProduction(t.slice, len(t.slice))

def p_alterind2p(t):
    """
    alterind2p   :   id tipocambioind parametrosindp
    """
    t[0] = t[1] + " " + t[2] + " " + t[3]
    insertProduction(t.slice, len(t.slice))

def p_alterind2p1(t):
    """
    alterind2p   :   ALL IN TABLESPACE id ownedbyindp
    """
    t[0] = t[1] + " " + t[2] + " " + t[3] + " " + t[4] + " " + t[5]
    insertProduction(t.slice, len(t.slice))

def p_alterind2p11(t):
    "alterind2p  :   SET TABLESPACE id"
    t[0] = t[1] + " " + t[2] + " " + t[3]
    insertProduction(t.slice, len(t.slice))

def p_alterind2p111(t):
    "alterind2p  :   "
    t[0] = ""
    insertProduction(t.slice, len(t.slice))

def p_parametrosindp(t):
    "parametrosindp  :   PARA parindp PARC"
    t[0] = t[1] + t[2] + t[3]
    insertProduction(t.slice, len(t.slice))

def p_parametrosindp1(t):
    "parametrosindp  :   parindp"
    t[0] = t[1]
    insertProduction(t.slice, len(t.slice))

def p_parametrosindp11(t):
    "parametrosindp  :   id id"
    t[0] = t[1] + " " + t[2]
    insertProduction(t.slice, len(t.slice))

def p_parindp(t):
    "parindp :   parindp COMA idind"
    res = ''
    res += t[1]
    res += ','+t[3]
    t[0] = res

def p_parindp1(t):
    "parindp :   idind"
    t[0] = t[1]

def p_ownedbyindp(t):
    "ownedbyindp :   OWNED BY parindp"
    t[0] = t[1] + " " + t[2] + " " + t[3]
    insertProduction(t.slice, len(t.slice))

def p_ownedbyindp1(t):
    "ownedbyindp    :   "
    t[0] = ""
    insertProduction(t.slice, len(t.slice))

#DROP INDICE DUPLICADO----------------------------------------------------------------------------------*
def p_dropindp(t):
    "dropindp    :   DROP INDEX concind ifexistsind listaidindp cascrestind PUNTOCOMA"
    t[0] = t[1] + " " + t[2] + " " + t[3] + " " + t[4] + " " + t[5] + " " + t[6] + t[7]
    insertProduction(t.slice, len(t.slice))

def p_listaidindp(t):
    "listaidindp :   listaidindp COMA id"
    res = ''
    res += t[1]
    res += ','+t[3]
    t[0] = res

def p_listaidindp1(t):
    "listaidindp :   id"
    t[0] = t[1]

#CREATE INDICE DUPLICADO--------------------------------------------------------------------------------*
def p_createindp(t):
    "createindp  :   CREATE uniqueind INDEX id ON id createind2p"
    t[0] = t[1] + " " + t[2] + " " + t[3] + " " + t[4] + " " + t[5] + " " + t[6] + " " + t[7]
    insertProduction(t.slice, len(t.slice))

def p_createind2p(t):
    "createind2p :   USING HASH createind3p"
    t[0] = t[1] + " " + t[2] + " " + t[3]
    insertProduction(t.slice, len(t.slice))

def p_createind2p1(t):
    "createind2p :   createind3p"
    t[0] = t[1]
    insertProduction(t.slice, len(t.slice))

def p_createind3p(t):
    "createind3p :   PARA listacolindp PARC indwherep PUNTOCOMA"
    t[0] = t[1] + " " + t[2] + " " + t[3] + " " + t[4] + t[5]
    insertProduction(t.slice, len(t.slice))

def p_listacolindp(t):
    "listacolindp    :   listacolindp COMA columnaindp"
    res = ''
    res += t[1]
    res += ','+t[3]
    t[0] = res

def p_listacolindp1(t):
    """listacolindp    :   columnaindp
                       |
    """
    t[0] = t[1]

def p_columnaindp(t):
    """
    columnaindp          :   id ordenindp
                        |   id idcondindp
    """
    t[0] = t[1] + " " + t[2]
    insertProduction(t.slice, len(t.slice))

def p_columnaindp1(t):
    "columnaindp :   id"
    t[0] = t[1]
    insertProduction(t.slice, len(t.slice))

def p_ordenindp(t):
    "ordenindp   :   indorder NULLS indorder2"
    t[0] = t[1] + " " + t[2] + " " + t[3]
    insertProduction(t.slice, len(t.slice))

def p_idcondindp(t):
    "idcondindp :  PARA id PARC"
    t[0] = t[1] + t[2] + t[3]
    insertProduction(t.slice, len(t.slice))

def p_indwherep(t):
    "indwherep   :   WHERE indnotp indwherecondp"
    t[0] = t[1] + " " + t[2] + " " + t[3]
    insertProduction(t.slice, len(t.slice))

def p_indwherep1(t):
    "indwherep   :   "
    t[0] = ""
    insertProduction(t.slice, len(t.slice))

def p_indnotp(t):
    "indnotp :   NOT PARA notcondp PARC"
    t[0] = t[1] + t[2] + t[3] + t[4]
    insertProduction(t.slice, len(t.slice))

def p_indnotp1(t):
    "indnotp :   "
    t[0] = ""
    insertProduction(t.slice, len(t.slice))

def p_notcondp(t):
    "notcondp    :   notcondp AND notvalp"
    res = ''
    res += t[1]
    res += ','+t[3]
    t[0] = res

def p_notcondp1(t):
    "notcondp    :   notvalp"
    t[0] = t[1]

def p_notvalp(t):
    "notvalp :   id signo id valortipo"
    t[0] = t[1] + t[2] + t[3] + " " + t[4]
    insertProduction(t.slice, len(t.slice))

def p_indwherecondp(t):
    "indwherecondp   :   id signo valortipo"
    t[0] = t[1] + t[2] + t[3]
    insertProduction(t.slice, len(t.slice))

def p_indwherecondp1(t):
    "indwherecondp   :   "
    t[0] = ""
    insertProduction(t.slice, len(t.slice))

#-------------------------------------------------------------------------------------------------------*

def p_querypp(t):
    'querypp : queryp com PUNTOCOMA'
    #por el momento
    t[0] = ''
    insertProduction(t.slice, len(t.slice))


#DELETE DUPLICADO-----------------------------------------------------------------------------------
def p_deletep(t):
    "deletep :   DELETE FROM id WHERE wherecondp PUNTOCOMA"
    t[0] = t[1] + " " + t[2] + " " + t[3] + " " + t[4] + " " + t[5] + " " + t[6]
    insertProduction(t.slice, len(t.slice))

def p_wherecondp(t):
    "wherecondp  :  id BETWEEN valortipo AND valortipo"
    t[0] = t[1] + " " + t[2] + " " + t[3] + " " + t[4] + " " + t[5]
    insertProduction(t.slice, len(t.slice))

def p_wherecondp1(t):
    """
    wherecondp  :   id MAYOR valortipo
            |   id MENOR valortipo
            |   id IGUAL valortipo
            |   id MENOR_IGUAL valortipo
            |   id MAYOR_IGUAL valortipo
    """
    t[0] = t[1] + " " + t[2] + " " + t[3]
    insertProduction(t.slice, len(t.slice))

#UPDATE DUPLICADO-----------------------------------------------------------------------------------------
def p_updatep(t):
    "updatep :   UPDATE id SET cond WHERE wherecondp PUNTOCOMA"
    t[0] = t[1] + " " + t[2] + " " + t[3] + " " + t[4] + " " + t[5] + " " + t[6] + " " + t[7]
    insertProduction(t.slice, len(t.slice))

def p_condp(t):
    """
    condp    :   id MAYOR valortipo
            |   id MENOR valortipo
            |   id IGUAL valortipo
            |   id MENOR_IGUAL valortipo
            |   id MAYOR_IGUAL valortipo
    """
    t[0] = t[1] + " " + t[2] + " " + t[3]
    insertProduction(t.slice, len(t.slice))

#INSERT DUPLICADO--------------------------------------------------------------------------------------------
def p_insertpp(t):
    'insertpp :   INSERT INTO ID colkeypz VALUES PARA lvaloresp PARC PUNTOCOMA'
    t[0] = t[1] + " " + t[2] + " " + t[3] + " " + t[4] + " " + t[5] + " " + t[6] + " " + t[7] + " " + t[8] + " " + t[9]
    insertProduction(t.slice, len(t.slice))

def p_colkeypz(t):
    'colkeypz : PARA colkey2pz PARC'
    t[0] = t[1] + t[2] + t[3]

def p_colkeypzEmpty(t):
    'colkeypz : empty'
    t[0] = ''

def p_colkey2pz(t):
    'colkey2pz : colkey2pz COMA ID'
    res = ''
    res += t[1]
    res += ','+t[3]
    t[0] = res

def p_colkey2pzSingle(t):
    'colkey2pz : ID'
    t[0] = t[1]

def p_lvaloresp(t):
    'lvaloresp : lvaloresp COMA valortipo '
    res = ''
    res += t[1]
    res += ','+t[3]
    t[0] = res

def p_lvalorespSingle(t):
    'lvaloresp : valortipo'
    t[0] = t[1]

#ALTER TABLE DUPLICADO------------------------------------------------------------------------------------------------
def p_altertbp(t):
    "altertbp   :   ALTER TABLE id altertb2p PUNTOCOMA"
    t[0] = t[1] + " " + t[2] + " " + t[3] + " " + t[4] + " " + t[5]
    insertProduction(t.slice, len(t.slice))

def p_altertb2p(t):
    "altertb2p   :   altertb2p alteracionp"
    res = ''
    res += t[1]
    res += ','+t[3]
    t[0] = res

def p_altertb2p1(t):
    "altertb2p   :   alteracionp"
    t[0] = t[1]

def p_alteracionp11111(t):
    """
    alteracionp  :   FOREIGN KEY colkeypz
                |   REFERENCES id colkeypz
    """
    t[0] = t[1] + " " + t[2] + " " + t[3]
    insertProduction(t.slice, len(t.slice))

def p_alteracionp111(t):
    "alteracionp :   UNIQUE colkeypz"
    t[0] = t[1] + " " + t[2]
    insertProduction(t.slice, len(t.slice))

def p_alteracionp1111(t):
    "alteracionp :   altcolp"
    t[0] = t[1]
    insertProduction(t.slice, len(t.slice))

def p_alteracionp11(t):
    "alteracionp :   ADD addpropp"
    t[0] = t[1] + " " + t[2]
    insertProduction(t.slice, len(t.slice))

def p_alteracionp1(t):
    """
    alteracionp  :   DROP droppropp id
                |   SET NOT NULL
    """
    t[0] = t[1] + " " + t[2] + " " + t[3]
    insertProduction(t.slice, len(t.slice))

def p_altcolp(t):
    "altcolp :   altcolp COMA alterp"
    res = ''
    res += t[1]
    res += ','+t[3]
    t[0] = res

def p_altcolp1(t):
    "altcolp :   alterp"
    t[0] = t[1]

def p_alterp(t):
    "alterp  :   ALTER COLUMN id propaltcolp"
    t[0] = t[1] + " " + t[2] + " " + t[3] + " " + t[4]
    insertProduction(t.slice, len(t.slice))

def p_propaltcolp(t):
    "propaltcolp :   TYPE reservadatipo"
    t[0] = t[1] + " " + t[2]
    insertProduction(t.slice, len(t.slice))

def p_addpropp(t):
    "addpropp    :   CHECK PARA condp PARC"
    t[0] = t[1] + t[2] + t[3] + t[4]
    insertProduction(t.slice, len(t.slice))

def p_addpropp1(t):
    """
    addpropp :   CONSTRAINT id
            |   COLUMN columnap
    """
    t[0] = t[1] + " " + t[2]
    insertProduction(t.slice, len(t.slice))

def p_columnap(t):
    "columnap    :   id reservadatipo notnullp keyp referencesp defaultp constraintp"
    t[0] = t[1] + " " + t[2] + " " + t[3] + " " + t[4] + " " + t[5] + " " + t[6] + " " + t[7]
    insertProduction(t.slice, len(t.slice))

def p_notnullp(t):
    "notnullp    :   not NULL"
    t[0] = t[1] + " " + t[2]
    insertProduction(t.slice, len(t.slice))

def p_notnullp1(t):
    "notnullp    :   "
    t[0] = ""

def p_keyp(t):
    """
    keyp :   SERIAL PRIMARY KEY
        |   PRIMARY KEY colkeypz
        |   FOREIGN KEY colkeypz
    """
    t[0] = t[1] + " " + t[2] + " " + t[3]

def p_keyp1(t):
    "keyp    :   "
    t[0] = ""

def p_referencesp(t):
    "referencesp :   REFERENCES id"
    t[0] = t[1] + " " + t[2]

def p_referencesp1(t):
    "referencesp :   "
    t[0] = ""

def p_defaultp(t):
    "defaultp   :   DEFAULT id"
    t[0] = t[1] + " " + t[2]

def p_defaultp1(t):
    "defaultp    :   "
    t[0] = ""

def p_constraintp(t):
    "constraintp :   UNIQUE"
    t[0] = t[1]

def p_constraintp1(t):
    "constraintp :   constp CHECK PARA condp PARC"
    t[0] = t[1] + " " + t[2] + " " + t[3] + t[4] + t[5]

def p_constraintp11(t):
    "constraintp :   "
    t[0] = ""

def p_constp(t):
    "constp  :   CONSTRAINT id"
    t[0] = t[1] + " " + t[2]

def p_droppropp(t):
    """
    droppropp    :   COLUMN
    """
    t[0] = t[1]

def p_droppropp1(t):
    """
    droppropp    :   CONSTRAINT id
    """
    t[0] = t[1] + " " + t[2]

#DROP TABLE DUPLICADO---------------------------------------------------------------------------------------------------
def p_droptbp(t):
    "droptbp :   DROP TABLE id PUNTOCOMA"
    t[0] = t[1] + " " + t[2] + " " + t[3] + t[4]

#CREATE TABLE DUPLICADO------------------------------------------------------------------------------------------------
def p_createtbp(t):
    "createtbp   :   CREATE TABLE id PARA coltbp PARC inheritsp PUNTOCOMA"
    t[0] = t[1] + " " + t[2] + " " + t[3] + " " + t[4] + " " + t[5] + " " + t[6] + " " + t[7] + " " + t[8]

def p_coltbp(t):
    "coltbp  :   coltbp COMA columnap"
    res = ''
    res += t[1]
    res += ','+t[3]
    t[0] = res

def p_coltbp1(t):
    "coltbp  :   columnap"
    t[0] = t[1]

def p_inheritsp(t):
    "inheritsp   :   INHERITS PARA id PARC"
    t[0] = t[1] + t[2] + t[3] + t[4]

def p_inhritsp1(t):
    "inheritsp   :   "
    t[0] = ""

#DROP DATABASE DUPLICADO-------------------------------------------------------------------------------------------------
def p_dropdbp(t):
    "dropdbp :   DROP DATABASE ifexistsp id PUNTOCOMA"
    t[0] = t[1] + " " + t[2] + " " + t[3] + " " + t[4] + t[5]

def p_ifexistsp(t):
    "ifexistsp   :   IF EXISTS"
    t[0] = t[1] + " " + t[2]

def p_ifexistsp1(t):
    "ifexistsp   :   "
    t[0] = ""

#ALTER DATABASE DUPLICADO---------------------------------------------------------------------------------------------------
def p_alterdbp(t):
    "alterdbp    :   ALTER DATABASE alterdb2p PUNTOCOMA"
    t[0] = t[1] + " " + t[2] + " " + t[3] + " " + t[4]

def p_alterdb2p(t):
    "alterdb2p   :   id alterdb3p"
    t[0] = t[1] + " " + t[2]

def p_alterdb2p1(t):
    "alterdb2p    :   NAME OWNER TO valortipo"
    t[0] = t[1] + " " + t[2] + " " + t[3] + " " + t[4]

def p_alterdb3p(t):
    "alterdb3p   :   RENAME TO valortipo"
    t[0] = t[1] + " " + t[2] + " " + t[3]

def p_alterdb3p1(t):
    "alterdb3p   :   OWNER TO LLAVEA valortipo SIMBOLOOR valortipo SIMBOLOOR valortipo LLAVEC"
    t[0] = t[1] + " " + t[2] + " " + t[3] + " " + t[4] + " " + t[5] + " " + t[6] + " " + t[7] + " " + t[8] + " " + t[9]

#SHOW DATABASE DUPLICADO------------------------------------------------------------------------------------------------------
def p_showdbp(t):
    "showdbp :   SHOW DATABASES PUNTOCOMA"
    t[0] = t[1] + " " + t[2] + t[3]

#CREATE DATABASE DUPLICADO---------------------------------------------------------------------------------------------------
def p_createdbp(t):
    "createdbp   :   CREATE replacedbp DATABASE ifnotexistsp id ownerp modep PUNTOCOMA"
    t[0] = t[1] + " " + t[2] + " " + t[3] + " " + t[4] + " " + t[5] + " " + t[6] + " " + t[7] + " " + t[8]

def p_replacedbp(t):
    "replacedbp  :   OR REPLACE"
    t[0] = t[1] + " " + t[2]

def p_replacedbp1(t):
    "replacedbp  :   "
    t[0] = ""

def p_ifnotexistsp(t):
    "ifnotexistsp    :   IF NOT EXISTS"
    t[0] = t[1] + " " + t[2] + " " + t[3]

def p_ifnotexistsp1(t):
    "ifnotexistsp    :   "
    t[0] = ""

def p_ownerp(t):
    "ownerp :   OWNER IGUAL valortipo"
    t[0] = t[1] + " " + t[2] + " " + t[3]

def p_ownerp1(t):
    "ownerp  :   "
    t[0] = ""

def p_modep(t):
    "modep   :   MODE IGUAL valortipo"
    t[0] = t[1] + " " + t[2] + " " + t[3]

def p_modep1(t):
    "modep   :   "
    t[0] = ""

#---------------------------------------------------------------------------------------------------------------------------------

def p_id(t):
    "id : ID"
    t[0] = t[1]
    insertProduction(t.slice, len(t.slice))

def p_valortipo(t):
    """
    valortipo   :   INT
                |   ID
                |   DEC
                |   TEXTO
                |   VARCHAR
                |   FALSE
                |   TRUE
                |  callfunc
    """

    if isinstance(t[1],llamadaF):
        t[0] = t[1]
    else:
        try :
            t = float(t[1])
            t[0] = str(t)
        except:
            ''''''
        if t[0] is None :
            if t[1].lower() == 'true' or t[1].lower() == 'false':
                t[0] = t[1].upper()
            else:
                t[0] = '\''+str(t[1])+'\''

    insertProduction(t.slice, len(t.slice))

def p_valornume(t):
    """
    valornume   :   INT
                |   DEC
    """
    t[0] = t[1]
